fix image out of screen

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -256,6 +256,10 @@ footer {
 }
 
 @media print, screen and (max-width: 480px) {
+  .img-illustration {
+    max-width: 320px;
+    height: auto;
+  }
   body {
     padding:15px;
   }
